--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('mario', 'assets/aladin.png',21, 21);
+			this.load.spritesheet('mario', 'assets/aladin.png',16, 16);
 			this.load.spritesheet('coin', 'assets/coin.png', 16, 16);
 
 			this.load.tilemap('level', 'assets/super_mario_map.json', null,
@@ -76,8 +76,8 @@ body {
 			game.physics.arcade.enable(player);
 			player.body.gravity.y = 370;
 			player.body.collideWorldBounds = true;
-			player.animations.add('walkRight', [ 1, 2, 3 ], 10, true);
-			player.animations.add('walkLeft', [ 8, 9, 10 ], 10, true);
+			player.animations.add('walkRight', [0, 1, 2, 3,4,5 ], 10, true);
+			player.animations.add('walkLeft', [ 7,8, 9, 10,11,12 ], 10, true);
 			player.goesRight = true;
 
 			game.camera.follow(player);
@@ -116,9 +116,9 @@ body {
 
 				if (player.body.velocity.y != 0) {
 					if (player.goesRight)
-						player.frame = 5;
+						player.frame = 3;
 					else
-						player.frame = 12;
+						player.frame = 10;
 				}
 			}
 		}
