--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 
 			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
-			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
+			this.load.spritesheet('goomba', 'assets/GOOMBA1.png', 16, 16);
 			this.load.spritesheet('mario', 'assets/aladin.png',15.5, 16);
 			this.load.spritesheet('coin', 'assets/COIN1.png', 16, 16);
 
