--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@ body {
 				});
 			}else {					//kill player by goomba.				
 				if (lives === 0) {
-					textLives.text = " NONE";					
+					textLives.text = " NONE";	
+					game.state.paused = true;
 				}
 				else {
 					lives--;														
