--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body {
 			}else {					//kill player by goomba.				
 				if (lives === 0) {
 					textLives.text = " NONE";	
-					game.state.paused = true;
+					game.paused = true;
 				}
 				else {
 					lives--;														
