--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 			this.load.spritesheet('mario', 'assets/aladin.png',15.5, 16);
 			this.load.spritesheet('coin', 'assets/COIN1.png', 16, 16);
 
-			this.load.tilemap('level', 'assets/mariomap.json', null,
+			this.load.tilemap('level', 'assets/mariomap1.json', null,
 					Phaser.Tilemap.TILED_JSON);
 		}
 
