--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 			this.load.baseURL = 'https://marilim.github.io/Super-Mario/';
 			this.load.crossOrigin = 'anonymous';
 
-			this.load.spritesheet('super_mario_tiles', 'assets/super_mario_tiles.png', 16,
+			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/GOOMBA1.png', 16, 16);
 			this.load.spritesheet('mario', 'assets/aladin.png',15.5, 16);
@@ -54,7 +54,7 @@ body {
 			game.stage.backgroundColor = '#5c94fc';
 
 			map = game.add.tilemap('level');
-			map.addTilesetImage('tiles', 'super_mario_tiles');
+			map.addTilesetImage('tiles', 'tiles');
 			map.setCollisionBetween(3, 12, true, 'solid');
 
 			map.createLayer('background');
